--- a/scss/style.scss
+++ b/scss/style.scss
@@ -227,7 +227,7 @@ $fz-text: 16px;
     &__slider {
         width: 100%;
         flex: 0 1 560px;
-        padding: 0 0 60px 0;
+        position: relative;
     }
 
     &__wrap {
@@ -250,7 +250,16 @@ $fz-text: 16px;
     }
 
     &__btn-prev, &__btn-next {
-        top: 96%;
+        position: absolute;
+        bottom: 0;
+        width: 40px;
+        height: 40px;
+        cursor: pointer;
+        img {
+            height: 100%;
+            width: 100%;
+            object-fit: cover;
+        }
     }
 
     &__btn-prev {
@@ -330,13 +339,13 @@ $fz-text: 16px;
 .photos {
     width: 250px;
     height: 150px;
+    position: relative;
 
     &__wrap {
     }
 
     &__slide {
         padding: 0 50px;
-        
             img {
                 width: 100%;
                 height: 100%;
@@ -345,10 +354,26 @@ $fz-text: 16px;
             }
     }
 
+    &__button-prev, &__button-next {
+        position: absolute;
+        z-index: 1;
+        top: calc(50% - 15px);
+        width: 40px;
+        height: 40px;
+        cursor: pointer;
+        img {
+            height: 100%;
+            width: 100%;
+            object-fit: cover;
+        }
+    }
+
     &__button-prev {
+        left: 0;
     }
 
     &__button-next {
+        right: 0;
     }
 }
 
