--- a/scss/style.scss
+++ b/scss/style.scss
@@ -526,7 +526,19 @@ $fz-text: 16px;
 
     &__advantage {
         font-size: $fz-text;
-        margin: 3px 0px;
+        padding: 0 0 0 10px;
+        margin: 0px 0px 7px 0px;
+        position: relative;
+            &::before {
+                content: '';
+                position: absolute;
+                top: 5px;
+                left: 0;
+                width: 5px;
+                height: 5px;
+                background-color: $color-first;
+                border-radius: 50%;
+            }
     }
 
     &__price {
@@ -537,6 +549,7 @@ $fz-text: 16px;
         padding: 20px 0px 20px 20px;
         s {
             font-size: $fz-text;
+            margin: 0 5px 0 0;
         }
         span {
             color: rgb(255, 0, 0);
