--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,9 +9,13 @@
 }
 /* Убираю скролл */
 body, html {
-    overflow: hidden;
+    
 }
 /* Основная оболочка сайта */
+.wrap {
+    overflow: hidden;
+}
+
 .wrapper {
 width: 100%;
 height: 100vh;
@@ -365,6 +369,10 @@ $fz-text: 16px;
             height: 100%;
             width: 100%;
             object-fit: cover;
+        }
+
+        &.swiper-button-disabled {
+            opacity: 0.5;
         }
     }
 
@@ -914,6 +922,113 @@ $fz-text: 16px;
             opacity: 1;
         }
     }
+}
+
+/* Страница политики конфиденциальности */
+.privacy {
+    overflow-x: hidden;
+    padding: 20px 0;
+
+    &__container {
+    }
+
+    &__logo {
+        width: 150px;
+        margin: 0 auto 20px auto;
+        img {
+            max-width: 100%;
+        }
+    }
+
+    &__title {
+        font-size: $fz_title;
+        margin: 0px 0px 20px 0px;
+    }
+
+    &__text {
+        p {
+            font-size: 16px;
+            color: $color_second;
+            margin: 0 0 10px 0;
+            padding: 0 0 0 30px;
+        }
+    }
+
+    &__subtitle {
+        font-size: $fz_subtitle;
+        margin: 20px 0px 10px 0px;
+        padding: 0 0 5px 0;
+        border-bottom: 2px solid $color_first;
+    }
+}
+
+/* Страница успешной отправки заявки */
+.success {
+    overflow: hidden;
+    padding: 20px 0 0 0;
+		&__container {
+        }
+        
+        &__logo {
+            width: 150px;
+            margin: 0 auto;
+                img {
+                    max-width: 100%;
+                }
+        }
+
+		&__row {
+            height: 70vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+		}
+
+		&__col {
+            margin: 0px 0px 20px 0px;
+		}
+
+		&__img {
+            margin: 0px 0px 20px 0px;
+            border-radius: 50%;
+            background-color: $color_first;
+            width: 120px;
+            height: 120px;
+            position: relative;
+
+            &::before, &::after {
+                content: '';
+                position: absolute;
+                bottom: 22px;
+                width: 20px;                
+                background-color: #fff;
+                border-radius: 5px;
+            }
+            &::before {
+                transform: rotate(-45deg);
+                height: 50px;
+                left: 30px;
+            }
+            &::after {
+                transform: rotate(45deg);
+                height: 70px;
+                left: 61.3px;
+            }
+		}
+
+		&__thanks {
+            font-size: $fz_title;
+            text-align: center;
+            margin: 0px 0px 20px 0px;
+		}
+
+		&__text {
+            font-size: $fz_subtitle;
+            color: $color_second;
+            text-align: center;
+            margin: 0px 0px 20px 0px;
+        }
 }
 
 /* Адаптив */
