--- a/css/style.css
+++ b/css/style.css
@@ -86,12 +86,13 @@ h1, h2, h3, h4, h5, h6 {
 /* Убираю скролл */
 /* Основная оболочка сайта */
 .wrap {
+  height: 100vh;
   overflow: hidden;
 }
 
 .wrapper {
   width: 100%;
-  height: 100vh;
+  height: 100%;
   background-color: #f7f7f7;
   position: relative;
 }
