--- a/scss/style.scss
+++ b/scss/style.scss
@@ -13,12 +13,13 @@ body, html {
 }
 /* Основная оболочка сайта */
 .wrap {
+    height: 100vh;
     overflow: hidden;
 }
 
 .wrapper {
 width: 100%;
-height: 100vh;
+height: 100%;
 background-color: #f7f7f7;
 position: relative;
 
