--- a/css/style.css
+++ b/css/style.css
@@ -84,9 +84,14 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 /* Убираю скролл */
+body, html {
+  position: relative;
+}
+
 /* Основная оболочка сайта */
 .wrap {
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   overflow: hidden;
 }
 
@@ -543,6 +548,9 @@ body, html {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .plan__content {
