--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,11 +9,16 @@
 }
 /* Убираю скролл */
 body, html {
-    
+    position: relative;
 }
 /* Основная оболочка сайта */
 .wrap {
-    height: 100vh;
+    // position: absolute;
+    // top: 0;
+    // left: 0;
+    width: 100%;
+    height: 100%;
+    // height: 100vh;
     overflow: hidden;
 }
 
@@ -453,6 +458,7 @@ $fz-text: 16px;
         display: flex;
         flex-direction: column;
         justify-content: center;
+        align-items: center;
     }
 
     &__title {
