--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,13 +9,10 @@
 }
 /* Убираю скролл */
 body, html {
-    position: relative;
+    // position: relative;
 }
 /* Основная оболочка сайта */
 .wrap {
-    // position: absolute;
-    // top: 0;
-    // left: 0;
     width: 100%;
     height: 100%;
     // height: 100vh;
@@ -109,6 +106,7 @@ $color-first: #a6e64d;
 $color-second: #000;
 $color-third: #f99746;
 $color-dop: #fff;
+$color-transparent: rgba(233, 233, 233, 0.5);
 $fz-h1: 40px;
 $fz-title: 30px;
 $fz-subtitle: 20px;
@@ -219,7 +217,8 @@ $fz-text: 16px;
     &__items {
         display: flex;
         justify-content: space-around;
-        margin: 0 0 30px 0;
+        padding: 10px 0 10px 0;
+        position: relative;
     }
 
     &__icon {
@@ -230,22 +229,65 @@ $fz-text: 16px;
         background-position: center;
         background-size: cover;
         background-repeat: no-repeat;
+        
 
         &_monitor {
             background-image: url(../img/monitor.svg);
-                &.active, &:hover {
+                &.active {
+                    background-image: url(../img/monitor-active.svg);
+                        &::after {
+                            content: '';
+                            position: absolute;
+                            top: 0;
+                            left: 0;
+                            width: 33.33%;
+                            height: 100%;
+                            background-color: $color-transparent;
+                            border-top-right-radius: 10px;
+                            border-top-left-radius: 10px;
+                        }
+                }
+                &:hover {
                     background-image: url(../img/monitor-active.svg);
                 }
         }
         &_like {
             background-image: url(../img/like.svg);
-                &.active, &:hover {
+                &.active {
+                    background-image: url(../img/like-active.svg);
+                    &::after {
+                        content: '';
+                        position: absolute;
+                        top: 0;
+                        left: 33.33%;
+                        width: 33.33%;
+                        height: 100%;
+                        background-color: $color-transparent;
+                        border-top-right-radius: 10px;
+                        border-top-left-radius: 10px;
+                    }
+                }
+                &:hover {
                     background-image: url(../img/like-active.svg);
                 }
         }
         &_presentation {
             background-image: url(../img/presentation.svg);
-                &.active, &:hover {
+                &.active {
+                    background-image: url(../img/presentation-active.svg);
+                    &::after {
+                        content: '';
+                        position: absolute;
+                        top: 0;
+                        left: 66.66%;
+                        width: 33.33%;
+                        height: 100%;
+                        background-color: $color-transparent;
+                        border-top-right-radius: 10px;
+                        border-top-left-radius: 10px;
+                    }
+                }
+                &:hover {
                     background-image: url(../img/presentation-active.svg);
                 }
         }
@@ -255,6 +297,9 @@ $fz-text: 16px;
     }
 
     &__description {
+        background-color: $color-transparent;
+        padding: 20px;
+        border-radius: 10px;
         color: $color-second;
         font-size: $fz-text;
         line-height: 1.2em;
@@ -388,17 +433,22 @@ $fz-text: 16px;
     }
 
     &__slide {
+        background-color: $color-transparent;
+        border-radius: 10px;
+        padding: 20px;
     }
 
     &__name {
         color: $color-second;
         font-size: $fz-subtitle;
+        font-weight: 500;
         margin: 0 0 20px 0;
     }
 
     &__text {
         color: $color-second;
         font-size: $fz-text;
+        line-height: 1.2em;
     }
 }
 
@@ -516,6 +566,10 @@ $fz-text: 16px;
 
     &__description {
         font-size: $fz-text;
+        line-height: 1.1em;
+        // background-color: $color-transparent;
+        // padding: 5px;
+        // border-radius: 10px;
     }
 }
 
@@ -576,7 +630,7 @@ $fz-text: 16px;
 
 .card {
     min-height: 200px;
-    background-color: rgba(243, 243, 243, 0.6);
+    background-color: $color-transparent;
     border-radius: 10px;
 
     &__row {
@@ -689,7 +743,7 @@ $fz-text: 16px;
 
 .form-contacts {
     max-width: 450px;
-    background-color: rgba(240, 240, 240, 0.5);
+    background-color: $color-transparent;
     padding: 20px;
     border-radius: 10px;
 
@@ -830,7 +884,7 @@ $fz-text: 16px;
 
     &__content {
         max-width: 800px;
-        background-color: rgb(240, 240, 240);
+        background-color: rgb(233, 233, 233);
         padding: 30px 30px 20px 30px;
         border-radius: 10px;
         position: relative;
