--- a/css/style.css
+++ b/css/style.css
@@ -1235,14 +1235,53 @@ body, html {
 
 .privacy__logo {
   width: 150px;
-  margin: 0 auto 20px auto;
+  margin: 0 auto 30px auto;
 }
 
 .privacy__logo img {
   max-width: 100%;
 }
 
+.privacy__btn {
+  text-align: center;
+  margin: 0 0 20px 0;
+}
+
+.privacy__button {
+  display: inline-block;
+  font-size: 20px;
+  color: #fff;
+  padding: 10px;
+  position: relative;
+  -webkit-transition: 300ms;
+  transition: 300ms;
+}
+
+.privacy__button::before {
+  content: '';
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #f99746;
+  -webkit-transform: skewX(-20deg);
+          transform: skewX(-20deg);
+}
+
+.privacy__button span {
+  position: relative;
+  z-index: 2;
+}
+
+.privacy__button:hover {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+}
+
 .privacy__title {
+  text-align: center;
   font-size: 30px;
   margin: 0px 0px 20px 0px;
 }
@@ -1258,7 +1297,7 @@ body, html {
   font-size: 20px;
   margin: 20px 0px 10px 0px;
   padding: 0 0 5px 0;
-  border-bottom: 2px solid #a6e64d;
+  border-bottom: 2px solid #f99746;
 }
 
 /* Страница успешной отправки заявки */
@@ -1300,7 +1339,7 @@ body, html {
 .success__img {
   margin: 0px 0px 20px 0px;
   border-radius: 50%;
-  background-color: #a6e64d;
+  background-color: #6a86ca;
   width: 120px;
   height: 120px;
   position: relative;
