--- a/scss/style.scss
+++ b/scss/style.scss
@@ -217,77 +217,40 @@ $fz-text: 16px;
     &__items {
         display: flex;
         justify-content: space-around;
-        padding: 10px 0 10px 0;
-        position: relative;
+        padding: 10px 0 0px 0;
+        
     }
 
     &__icon {
-        flex: 0 1 70px;
+        flex: 0 1 33.333%;
         height: 70px;
         cursor: pointer;
-        // transition: 300ms;
         background-position: center;
-        background-size: cover;
+        background-size: 60px;
         background-repeat: no-repeat;
-        
+        transition: background-color 500ms;
+
+        &.active {
+            background-color: $color-transparent;
+            border-top-right-radius: 10px;
+            border-top-left-radius: 10px;
+        }
 
         &_monitor {
             background-image: url(../img/monitor.svg);
-                &.active {
-                    background-image: url(../img/monitor-active.svg);
-                        &::after {
-                            content: '';
-                            position: absolute;
-                            top: 0;
-                            left: 0;
-                            width: 33.33%;
-                            height: 100%;
-                            background-color: $color-transparent;
-                            border-top-right-radius: 10px;
-                            border-top-left-radius: 10px;
-                        }
-                }
-                &:hover {
+                &.active, &:hover {
                     background-image: url(../img/monitor-active.svg);
                 }
         }
         &_like {
             background-image: url(../img/like.svg);
-                &.active {
-                    background-image: url(../img/like-active.svg);
-                    &::after {
-                        content: '';
-                        position: absolute;
-                        top: 0;
-                        left: 33.33%;
-                        width: 33.33%;
-                        height: 100%;
-                        background-color: $color-transparent;
-                        border-top-right-radius: 10px;
-                        border-top-left-radius: 10px;
-                    }
-                }
-                &:hover {
+                &.active, &:hover {
                     background-image: url(../img/like-active.svg);
                 }
         }
         &_presentation {
             background-image: url(../img/presentation.svg);
-                &.active {
-                    background-image: url(../img/presentation-active.svg);
-                    &::after {
-                        content: '';
-                        position: absolute;
-                        top: 0;
-                        left: 66.66%;
-                        width: 33.33%;
-                        height: 100%;
-                        background-color: $color-transparent;
-                        border-top-right-radius: 10px;
-                        border-top-left-radius: 10px;
-                    }
-                }
-                &:hover {
+                &.active, &:hover {
                     background-image: url(../img/presentation-active.svg);
                 }
         }
@@ -299,7 +262,8 @@ $fz-text: 16px;
     &__description {
         background-color: $color-transparent;
         padding: 20px;
-        border-radius: 10px;
+        border-bottom-left-radius : 10px;
+        border-bottom-right-radius : 10px;
         color: $color-second;
         font-size: $fz-text;
         line-height: 1.2em;
@@ -427,7 +391,7 @@ $fz-text: 16px;
 
 .words {
     width: 100%;
-    height: auto;
+    height: 100%;
 
     &__wrap {
     }
