--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -137,12 +137,12 @@
             background-position: 0 0;
         }
 
-        &__page {
-            padding: 0 0 100px 0;
-                &:nth-child(6) {
-                    padding: 0 0 0px 0;
-                }
-        }
+        // &__page {
+        //     padding: 0 0 100px 0;
+        //         &:nth-child(6) {
+        //             padding: 0 0 0px 0;
+        //         }
+        // }
 
         .swiper-pagination-bullet {
             width: 15px;
@@ -178,12 +178,12 @@
 
     .advantages {
         &__items {
-            padding: 5px 0 10px 0;
+            padding: 5px 0 0px 0;
         }
 
         &__icon {
-            flex: 0 1 50px;
             height: 50px;
+            background-size: 40px;
         }
 
         &__description {
