--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -264,9 +264,9 @@
     }
 
     .price {
-        &__slide {
-            padding: 20px 0 100px 0;
-        }
+        // &__slide {
+        //     padding: 20px 0 100px 0;
+        // }
 
         &__body {
             height: 100%;
