--- a/css/style.css
+++ b/css/style.css
@@ -83,16 +83,11 @@ h1, h2, h3, h4, h5, h6 {
   height: 100%;
 }
 
-/* Убираю скролл */
 /* Основная оболочка сайта */
 .wrap {
   width: 100%;
   height: 100%;
   overflow: hidden;
-}
-
-.swiper-container-vertical > .swiper-pagination-bullets .swiper-pagination-bullet {
-  margin: 15px 0;
 }
 
 .wrapper {
@@ -303,7 +298,7 @@ body, html {
   -webkit-box-flex: 0;
       -ms-flex: 0 1 33.333%;
           flex: 0 1 33.333%;
-  height: 70px;
+  height: 80px;
   cursor: pointer;
   background-position: center;
   background-size: 60px;
@@ -1527,6 +1522,9 @@ body, html {
   }
   .plan__description_1 {
     display: block;
+  }
+  .price__slide {
+    padding: 20px 0 0px 0;
   }
   .price__body {
     height: 100%;
