--- a/scss/style.scss
+++ b/scss/style.scss
@@ -102,6 +102,7 @@ body, html {font-family: 'Montserrat', sans-serif;}
 $color-first: #a6e64d;
 $color-second: #000;
 $color-third: #f99746;
+$color-fourth: #6a86ca;
 $color-dop: #fff;
 $color-transparent: rgba(233, 233, 233, 0.5);
 $fz-h1: 40px;
@@ -1042,7 +1043,7 @@ $fz-text: 16px;
             left: 0;
             width: 100%;
             height: 100%;
-            background: $color-third;
+            background: $color-fourth;
             transform: skewX(-20deg);
         }
         
@@ -1075,41 +1076,39 @@ $fz-text: 16px;
         font-size: $fz_subtitle;
         margin: 20px 0px 10px 0px;
         padding: 0 0 5px 0;
-        border-bottom: 2px solid $color_third;
+        border-bottom: 2px solid $color_fourth;
     }
 }
 
 /* Страница успешной отправки заявки */
 .success {
+    height: calc(100vh - 100px);
     overflow: hidden;
     padding: 20px 0 0 0;
 		&__container {
         }
         
         &__logo {
-            width: 150px;
+            height: 100px;
+            width: 100px;
             margin: 0 auto;
                 img {
-                    max-width: 100%;
+                    max-height: 100%;
                 }
         }
 
 		&__row {
-            height: 70vh;
+            height: calc(100% - 120px);
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
 		}
 
-		&__col {
-            margin: 0px 0px 20px 0px;
-		}
-
 		&__img {
             margin: 0px 0px 20px 0px;
             border-radius: 50%;
-            background-color: #6a86ca;
+            background-color: $color-fourth;
             width: 120px;
             height: 120px;
             position: relative;
@@ -1144,7 +1143,7 @@ $fz-text: 16px;
             font-size: $fz_subtitle;
             color: $color_second;
             text-align: center;
-            margin: 0px 0px 20px 0px;
+            margin: 0px 0px 0px 0px;
         }
 }
 
