--- a/css/style.css
+++ b/css/style.css
@@ -482,13 +482,14 @@ body, html {
 
 .words {
   width: 100%;
-  height: 100%;
+  height: auto;
 }
 
 .words__slide {
   background-color: rgba(233, 233, 233, 0.5);
   border-radius: 10px;
   padding: 20px;
+  height: 100%;
 }
 
 .words__name {
@@ -1276,9 +1277,9 @@ body, html {
 
 /* Страница успешной отправки заявки */
 .success {
-  height: calc(100vh - 100px);
+  height: 100vh;
   overflow: hidden;
-  padding: 20px 0 0 0;
+  padding: 20px 0 120px 0;
 }
 
 .success__logo {
