--- a/scss/style.scss
+++ b/scss/style.scss
@@ -394,7 +394,7 @@ $fz-text: 16px;
 
 .words {
     width: 100%;
-    height: 100%;
+    height: auto;
 
     &__wrap {
     }
@@ -403,6 +403,7 @@ $fz-text: 16px;
         background-color: $color-transparent;
         border-radius: 10px;
         padding: 20px;
+        height: 100%;
     }
 
     &__name {
@@ -1095,9 +1096,9 @@ $fz-text: 16px;
 
 /* Страница успешной отправки заявки */
 .success {
-    height: calc(100vh - 100px);
+    height: 100vh;
     overflow: hidden;
-    padding: 20px 0 0 0;
+    padding: 20px 0 120px 0;
 		&__container {
         }
         
