--- a/css/style.css
+++ b/css/style.css
@@ -1510,15 +1510,21 @@ body, html {
   .reviews__column_w {
     margin: 0 0 30px 0;
   }
-  .words {
-    text-align: center;
-  }
   .words__slide {
     padding: 10px;
+  }
+  .words__name {
+    margin: 0 0 10px 0;
+    text-align: center;
   }
   .photos__button-prev, .photos__button-next {
     width: 30px;
     height: 30px;
+  }
+  .plan__content {
+    background-color: rgba(233, 233, 233, 0.5);
+    border-radius: 10px;
+    padding: 10px;
   }
   .plan__point::after {
     top: 40px;
