--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1096,15 +1096,15 @@ $fz-text: 16px;
 
 /* Страница успешной отправки заявки */
 .success {
-    height: 100vh;
+    height: calc(100vh - 120px);
     overflow: hidden;
-    padding: 20px 0 120px 0;
+    padding: 20px 0 0px 0;
 		&__container {
         }
         
         &__logo {
-            height: 100px;
-            width: 100px;
+            height: 80px;
+            width: 80px;
             margin: 0 auto;
                 img {
                     max-height: 100%;
@@ -1112,7 +1112,7 @@ $fz-text: 16px;
         }
 
 		&__row {
-            height: calc(100% - 120px);
+            height: calc(100% - 100px);
             display: flex;
             flex-direction: column;
             justify-content: center;
